--- a/application/package.json
+++ b/application/package.json
@@ -34,6 +34,9 @@
   },
   "dependencies": {
     "@ibm-generative-ai/node-sdk": "3.2.3",
+    "@langchain/community": "^0.3.11",
+    "@langchain/core": "^0.3.17",
+    "@langchain/langgraph": "^0.2.20",
     "bee-agent-framework": "0.0.11",
     "dotenv": "16.4.5",
     "express": "4.19.2",
