--- a/applications/application/docker-compose.yml
+++ b/applications/application/docker-compose.yml
@@ -1,41 +1,9 @@
 services:
-  bee-code-interpreter:
-    image: "iambeeagent/bee-code-interpreter:latest"
-    environment:
-      KUBECONFIG: /root/kubeconfig.yaml
-      APP_EXECUTOR_IMAGE: "iambeeagent/bee-code-executor:latest"
-      APP_EXECUTOR_CONTAINER_RESOURCES: "{}"
-      APP_FILE_STORAGE_PATH: "/storage"
-    volumes:
-      - ${CODE_INTEPRETER_TMPDIR:-./tmp/code_interpreter}:/storage
-      - k3s-kubeconfig:/kube
-    ports:
-      - "50051:50051"
-    entrypoint: ["/bin/sh", "-c"]
-    command:
-      - >
-        echo 'Updating kubeconfig' &&
-        while [ ! -f $${KUBECONFIG} ] || ! kubectl get namespace default 2>/dev/null 1>&2; do
-          sleep 1;
-          sed 's|127.0.0.1|bee-code-interpreter-k3s|g' /kube/kubeconfig.yaml >$${KUBECONFIG} 2>/dev/null;
-        done &&
-        echo 'Kubeconfig updated successfully' &&
-
-        echo "Pulling executor image $${APP_EXECUTOR_IMAGE}" &&
-        if kubectl get job/pull-image 2>/dev/null 1>&2; then
-          echo "pull-image job already exists";
-        else
-          kubectl create job pull-image --image "$${APP_EXECUTOR_IMAGE}" -- /bin/sh -c "echo done";
-        fi &&
-        kubectl wait --for=condition=complete job/pull-image --timeout 3600s &&
-        echo 'Image pulled successfully' &&
-
-        python -m code_interpreter
-    depends_on:
-      - bee-code-interpreter-k3s
-
   bee-code-interpreter-k3s:
-    image: "rancher/k3s:v1.29.7-k3s1"
+    profiles:
+      - all
+      - code_interpreter
+    image: "rancher/k3s:v1.31.2-k3s1"
     command: ["server", "--tls-san", "bee-code-interpreter-k3s"]
     tmpfs:
       - /run
@@ -47,14 +15,77 @@ services:
         hard: 65535
     privileged: true
     restart: always
-    environment:
-      - K3S_TOKEN=secret-token
-      - K3S_KUBECONFIG_OUTPUT=/output/kubeconfig.yaml
-      - K3S_KUBECONFIG_MODE=644
     volumes:
       - k3s-containerd:/var/lib/rancher/k3s/agent/containerd
-      - k3s-kubeconfig:/output
+      - ${CODE_INTEPRETER_TMPDIR:-./tmp/code_interpreter_target}:/storage
+      - ./infra/bee-code-interpreter.yaml:/var/lib/rancher/k3s/server/manifests/bee-code-interpreter.yaml
+    ports:
+      - "50051:30051"
+    healthcheck:
+      test: "kubectl get pod code-interpreter | grep Running"
+      interval: 10s
+      retries: 10
+      start_period: 30s
+  mongo:
+    profiles:
+      - all
+      - observe
+    image: mongo:7
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: mongo
+      MONGO_INITDB_ROOT_PASSWORD: mongo
+    healthcheck:
+      test: |
+        mongosh --quiet --eval 'db.getSiblingDB("bee-observe").getCollection("span") ? quit(0) : quit(1)' || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 5
+  redis:
+    profiles:
+      - all
+      - observe
+    image: redis:7
+    command: redis-server --save 20 1 --loglevel warning
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+  mlflow:
+    profiles:
+      - all
+      - observe
+    image: bitnami/mlflow:2.16.2
+    ports:
+      - "8080:8080"
+    entrypoint: ["/bin/bash", "-c", "/entrypoint.sh && mlflow server --host 0.0.0.0 --port 8080"]
+    security_opt:
+      - "label=disable"
+    volumes:
+      - ./infra/observe/entrypoint.sh:/entrypoint.sh:ro
+  observe_api:
+    profiles:
+      - all
+      - observe
+    image: icr.io/i-am-bee/bee-observe:0.0.4
+    ports:
+      - "4002:3000"
+    command: >
+      /bin/sh -c "
+        npx mikro-orm --config dist/mikro-orm.config.js migration:up &&
+        node ./dist/index.js
+      "
+    env_file:
+      - ./infra/observe/.env.docker
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://0.0.0.0:3000/health || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    depends_on:
+      - mlflow
+      - mongo
+      - redis
 
 volumes:
-  k3s-kubeconfig:
   k3s-containerd:
