--- a/applications/application/package.json
+++ b/applications/application/package.json
@@ -33,8 +33,9 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@ibm-cloud/watsonx-ai": "^1.5.0",
     "@ibm-generative-ai/node-sdk": "3.2.3",
-    "bee-agent-framework": "0.0.11",
+    "bee-agent-framework": "0.1.1",
     "dotenv": "16.4.5",
     "express": "4.19.2",
     "ollama": "0.5.8",
