--- a/applications/application/package.json
+++ b/applications/application/package.json
@@ -12,6 +12,7 @@
     "start:appOneLLMOneAgent": "tsx src/appOneLLMOneAgent.ts",
     "start:appOneLLMTwoAgents": "tsx src/appOneLLMTwoAgents.ts",
     "start:appOneLocalLLMTwoAgents": "tsx src/appOneLocalLLMTwoAgents.ts",
+    "start:multiAgent": "tsx src/multiAgent.ts",
     "infra:start-code-interpreter": "yarn _docker compose up bee-code-interpreter",
     "infra:stop-all": "yarn _docker compose down",
     "infra:clean-all": "yarn _docker compose down --volumes",
