--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ instructlab/watsonx-openapi
 instructlab/watsonx-openai-api
 orchestrate/custom-search/venv
 __pycache__/
+applications/application/output.txt
