fixed verbose console output for 0.1.1
Signed-off-by: Nikolas Neubacher <nikolas.neubacher@ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ instructlab/watsonx-openai-api
 orchestrate/custom-search/venv
 __pycache__/
 applications/application/output.txt
+applications/application/src/multiAgent.ts
