quick fix for tools, messed something up while resolving merge conflicts I guess
Signed-off-by: Nikolas Neubacher <nikolas.neubacher@ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ orchestrate/custom-search/venv
 __pycache__/
 applications/application/output.txt
 applications/application/src/multiAgent.ts
+applications/application/src/multiAgents.ts
