--- a/applications/application/package.json
+++ b/applications/application/package.json
@@ -38,6 +38,9 @@
   "dependencies": {
     "@ibm-cloud/watsonx-ai": "^1.5.0",
     "@ibm-generative-ai/node-sdk": "3.2.3",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.57.2",
+    "@opentelemetry/instrumentation": "^0.57.2",
+    "@opentelemetry/sdk-node": "^0.57.2",
     "bee-agent-framework": "0.1.1",
     "dotenv": "16.4.5",
     "express": "4.19.2",
