update .gitignore and README.md

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ instructlab/watsonx-openapi
 instructlab/watsonx-openai-api
 orchestrate/custom-search/venv
 __pycache__/
+
+# Additional
+orchestrate/custom-search/ce-deployment
