added data and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ workshops/regional_techXchange_2025_03/03_phase3_agents/prompts/2025-02-28-02.md
 workshops/regional_techXchange_2025_03/03_phase3_agents/regional_techXchange-march25-agents.code-workspace
 
 api_data.db
+*.pdf
