--- a/workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/src/langgraph_react_agent/.env_template
+++ b/workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/src/langgraph_react_agent/.env_template
@@ -15,3 +15,15 @@ export WATSONX_INSTANCE_ID=XXX
 export WATSONX_URL="https://${WATSONX_REGION}.ml.cloud.ibm.com"
 export USER_AGENT="0001"
 
+# Instana
+export TRACELOOP_BASE_URL=XXX.instana.io:4317
+export TRACELOOP_LOGGING_ENABLED=true
+export TRACELOOP_LOGGING_ENDPOINT=$TRACELOOP_BASE_URL
+export TRACELOOP_METRICS_ENABLED=true
+export TRACELOOP_METRICS_ENDPOINT=XXX.codeengine.appdomain.cloud:443
+export TRACELOOP_HEADERS="x-instana-key=XXXX,x-instana-host=XXXX"
+
+export OTEL_EXPORTER_OTLP_METRICS_INSECURE=false
+export OTEL_METRIC_EXPORT_INTERVAL=10000
+export OTEL_EXPORTER_OTLP_INSECURE=false
+
