some changes related to the updates of the template

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ api_data.db
 workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/.venv/bin/activate.csh
 workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/backup/config_new.toml
 workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/backup/config_old.toml
+.venv_instana_info/
