--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,26 @@ workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_impleme
 workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/backup/config_new.toml
 workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/backup/config_old.toml
 .venv_instana_info/
+
+# Workshop regional_techXchange_2025_06
+workshops/regional_techXchange_2025_06/03_phase3_agents/agents/langgraph_implementation/.venv
+workshops/regional_techXchange_2025_06/03_phase3_agents/ui/code/.streamlit
+workshops/regional_techXchange_2025_06/03_phase3_agents/agents/langgraph_implementation/poetry.lock
+workshops/regional_techXchange_2025_06/03_phase3_agents/agents/langgraph_implementation/.pytest_cache
+workshops/regional_techXchange_2025_06/03_phase3_agents/agents/langgraph_implementation/prompts
+workshops/regional_techXchange_2025_06/03_phase3_agents/agents/langgraph_implementation/config.toml
+workshops/regional_techXchange_2025_06/03_phase3_agents/agents/langgraph_implementation/watsonx-ochestrate_integration
+workshops/regional_techXchange_2025_06/03_phase3_agents/agents/langgraph_implementation/.venv
+workshops/regional_techXchange_2025_06/03_phase3_agents/prompts/2025-02-28-01.md
+workshops/regional_techXchange_2025_06/03_phase3_agents/prompts/2025-03-03-01.md
+
+workshops/regional_techXchange_2025_06/03_phase3_agents/watsonx-ochestrate_integration/openapi-specs/
+workshops/regional_techXchange_2025_06/03_phase3_agents/prompts/2025-02-28-02.md
+workshops/regional_techXchange_2025_06/03_phase3_agents/regional_techXchange-march25-agents.code-workspace
+
+
+api_data.db
+*.pdf
+workshops/regional_techXchange_2025_06/03_phase3_agents/agents/langgraph_implementation/.venv/bin/activate.csh
+workshops/regional_techXchange_2025_06/03_phase3_agents/agents/langgraph_implementation/backup/config_new.toml
+workshops/regional_techXchange_2025_06/03_phase3_agents/agents/langgraph_implementation/backup/config_old.toml
