update gitingore and add agent configuration files
Signed-off-by: Thomas Südbröcker <thomas.suedbroecker@de.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ api_data.db
 workshops/regional_techXchange_2025_06/03_phase3_agents/agents/langgraph_implementation/.venv/bin/activate.csh
 workshops/regional_techXchange_2025_06/03_phase3_agents/agents/langgraph_implementation/backup/config_new.toml
 workshops/regional_techXchange_2025_06/03_phase3_agents/agents/langgraph_implementation/backup/config_old.toml
+!workshops/regional_techXchange_2025_10/3_watsonx_orchestrate/galaxium_travels_documents/company_overview.pdf
