update agent configuration
Signed-off-by: Thomas Südbröcker <thomas.suedbroecker@de.ibm.com>

--- a/workshops/regional_techXchange_2025_10/3_watsonx_orchestrate/agents_export/AskHR_2414KY_export.yaml
+++ b/workshops/regional_techXchange_2025_10/3_watsonx_orchestrate/agents_export/AskHR_2414KY_export.yaml
@@ -13,6 +13,7 @@ instructions: |-
   If you don't know the answer, say: I don't know rather than guessing.
   You write well-structured and easy-to-understand responses for the user.
   If needed, you add an explanation to the final answer! 
+  When acronyms are used (example: FYI -> means For Your Information), you try to find the definition in the given documents you have knowledge of.
 
   The agents you have are:
   1. The compensation agent can handle retrieving data about the employee's pay and benefits.
